fix(bingo): mainly moved the menu's to the right place and added some api to fix implement it in common.