@@ -2,9 +2,10 @@ package io.github.steaf23.bingoreloaded.settings;
 
 import io.github.steaf23.bingoreloaded.data.BingoMessage;
 import io.github.steaf23.bingoreloaded.data.CustomKitData;
-import io.github.steaf23.bingoreloaded.gui.inventory.EffectOptionFlags;
-import io.github.steaf23.bingoreloaded.gui.inventory.item.SerializableItem;
+import io.github.steaf23.bingoreloaded.lib.item.SerializableItem;
+import io.github.steaf23.bingoreloaded.lib.api.ItemType;
 import io.github.steaf23.bingoreloaded.lib.item.ItemTemplate;
+import io.github.steaf23.bingoreloaded.player.EffectOptionFlags;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextColor;
@@ -31,35 +32,35 @@ public enum PlayerKit
     ;
 
     public static final ItemTemplate WAND_ITEM = new ItemTemplate(
-            Material.WARPED_FUNGUS_ON_A_STICK,
+            ItemType.of("minecraft:warped_fungus_on_a_stick"),
             BingoMessage.WAND_ITEM_NAME.asPhrase().color(NamedTextColor.DARK_PURPLE).decorate(TextDecoration.BOLD, TextDecoration.ITALIC),
             BingoMessage.WAND_ITEM_DESC.asMultiline())
             .addEnchantment(Enchantment.UNBREAKING, 3)
             .setCompareKey("wand");
 
     public static final ItemTemplate CARD_ITEM_RENDERABLE = new ItemTemplate(
-            Material.FILLED_MAP,
+            ItemType.of("minecraft:filled_map"),
             BingoMessage.CARD_ITEM_NAME.asPhrase().color(NamedTextColor.DARK_PURPLE).decorate(TextDecoration.BOLD, TextDecoration.ITALIC),
             BingoMessage.CARD_ITEM_DESC.asMultiline())
             .setGlowing(true)
             .setCompareKey("card");
 
     public static final ItemTemplate CARD_ITEM = new ItemTemplate(
-            Material.FLOWER_BANNER_PATTERN,
+            ItemType.of("minecraft:flower_banner_pattern"),
             BingoMessage.CARD_ITEM_NAME.asPhrase().color(NamedTextColor.DARK_PURPLE).decorate(TextDecoration.BOLD, TextDecoration.ITALIC),
             BingoMessage.CARD_ITEM_DESC.asMultiline())
             .setGlowing(true)
             .setCompareKey("card");
 
     public static final ItemTemplate VOTE_ITEM = new ItemTemplate(
-            Material.EMERALD,
+            ItemType.of("minecraft:emerald"),
             BingoMessage.VOTE_ITEM_NAME.asPhrase().color(NamedTextColor.DARK_PURPLE).decorate(TextDecoration.BOLD, TextDecoration.ITALIC),
             BingoMessage.VOTE_ITEM_DESC.asMultiline())
             .setCompareKey("vote")
             .addEnchantment(Enchantment.VANISHING_CURSE, 1);
 
     public static final ItemTemplate TEAM_ITEM = new ItemTemplate(
-            Material.WHITE_GLAZED_TERRACOTTA,
+            ItemType.of("minecraft:white_glazed_terracotta"),
             BingoMessage.TEAM_ITEM_NAME.asPhrase().color(NamedTextColor.DARK_PURPLE).decorate(TextDecoration.BOLD, TextDecoration.ITALIC),
             BingoMessage.TEAM_ITEM_DESC.asMultiline())
             .setCompareKey("team")
@@ -86,86 +87,88 @@ public enum PlayerKit
 
     public List<SerializableItem> getItems(TextColor teamColor)
     {
-        ItemTemplate helmet = new ItemTemplate(39, Material.LEATHER_HELMET)
-                .setLeatherColor(teamColor);
-        ItemTemplate boots = new ItemTemplate(36, Material.LEATHER_BOOTS)
-                .setLeatherColor(teamColor);
+        //FIXME: REFACTOR use nbt default_kits data file instead of hardcoding
+//        ItemTemplate helmet = new ItemTemplate(39, ItemType.of("minecraft:leather_helmet"))
+//                .setLeatherColor(teamColor);
+//        ItemTemplate boots = new ItemTemplate(36, ItemType.of("minecraft:leather_boots"))
+//                .setLeatherColor(teamColor);
+//
+//        List<ItemTemplate> items = new ArrayList<>();
+//        switch (this)
+//        {
+//            case NORMAL -> {
+//                items.add(helmet
+//                        .addEnchantment(Enchantment.AQUA_AFFINITY, 1));
+//                items.add(boots
+//                        .addEnchantment(Enchantment.DEPTH_STRIDER, 3));
+//                items.add(new ItemTemplate(1, Material.IRON_PICKAXE));
+//                items.add(new ItemTemplate(0, Material.IRON_AXE));
+//                items.add(new ItemTemplate(2, Material.IRON_SHOVEL)
+//                        .addEnchantment(Enchantment.SILK_TOUCH, 1));
+//                items.add(new ItemTemplate(3, Material.COOKED_PORKCHOP)
+//                        .setAmount(32));
+//            }
+//            case OVERPOWERED -> {
+//                items.add(WAND_ITEM.copyToSlot(8));
+//                items.add(helmet
+//                        .addEnchantment(Enchantment.UNBREAKING, 3)
+//                        .addEnchantment(Enchantment.AQUA_AFFINITY, 1)
+//                        .addEnchantment(Enchantment.PROTECTION, 4));
+//                items.add(boots
+//                        .addEnchantment(Enchantment.UNBREAKING, 3)
+//                        .addEnchantment(Enchantment.DEPTH_STRIDER, 3)
+//                        .addEnchantment(Enchantment.PROTECTION, 4));
+//                items.add(new ItemTemplate(1, Material.NETHERITE_PICKAXE)
+//                        .addEnchantment(Enchantment.FORTUNE, 3)
+//                        .addEnchantment(Enchantment.EFFICIENCY, 5));
+//                items.add(new ItemTemplate(0, Material.NETHERITE_AXE)
+//                        .addEnchantment(Enchantment.LOOTING, 3)
+//                        .addEnchantment(Enchantment.SHARPNESS, 5)
+//                        .addEnchantment(Enchantment.EFFICIENCY, 5));
+//                items.add(new ItemTemplate(2, Material.NETHERITE_SHOVEL)
+//                        .addEnchantment(Enchantment.SILK_TOUCH, 1)
+//                        .addEnchantment(Enchantment.EFFICIENCY, 5));
+//                items.add(new ItemTemplate(3, Material.GOLDEN_CARROT)
+//                        .setAmount(64));
+//            }
+//            case RELOADED -> {
+//                items.add(WAND_ITEM.copyToSlot(8));
+//                items.add(helmet
+//                        .addEnchantment(Enchantment.UNBREAKING, 3)
+//                        .addEnchantment(Enchantment.AQUA_AFFINITY, 1)
+//                        .addEnchantment(Enchantment.PROTECTION, 4));
+//                items.add(boots
+//                        .addEnchantment(Enchantment.UNBREAKING, 3)
+//                        .addEnchantment(Enchantment.DEPTH_STRIDER, 3)
+//                        .addEnchantment(Enchantment.PROTECTION, 4));
+//                items.add(new ItemTemplate(38, Material.ELYTRA)
+//                        .addEnchantment(Enchantment.UNBREAKING, 10));
+//                items.add(new ItemTemplate(1, Material.NETHERITE_PICKAXE)
+//                        .addEnchantment(Enchantment.FORTUNE, 3)
+//                        .addEnchantment(Enchantment.EFFICIENCY, 5));
+//                items.add(new ItemTemplate(0, Material.NETHERITE_AXE)
+//                        .addEnchantment(Enchantment.LOOTING, 3)
+//                        .addEnchantment(Enchantment.SHARPNESS, 5)
+//                        .addEnchantment(Enchantment.EFFICIENCY, 5));
+//                items.add(new ItemTemplate(2, Material.NETHERITE_SHOVEL)
+//                        .addEnchantment(Enchantment.SILK_TOUCH, 1)
+//                        .addEnchantment(Enchantment.EFFICIENCY, 5));
+//                items.add(new ItemTemplate(3, Material.ENCHANTED_GOLDEN_APPLE)
+//                        .setAmount(64));
+//            }
+//            case CUSTOM_1, CUSTOM_2, CUSTOM_3, CUSTOM_4, CUSTOM_5 -> {
+//                CustomKit kit = customKitData.getCustomKit(this);
+//                if (kit != null)
+//                {
+//                    // Color colored items according to the team color.
+//                    return kit.items().stream()
+//                            .map(item -> new SerializableItem(item.slot(), ItemTemplate.colorItemStack(item.stack(), teamColor)))
+//                            .toList();
+//                }
+//            }
+//        }
 
         List<ItemTemplate> items = new ArrayList<>();
-        switch (this)
-        {
-            case NORMAL -> {
-                items.add(helmet
-                        .addEnchantment(Enchantment.AQUA_AFFINITY, 1));
-                items.add(boots
-                        .addEnchantment(Enchantment.DEPTH_STRIDER, 3));
-                items.add(new ItemTemplate(1, Material.IRON_PICKAXE));
-                items.add(new ItemTemplate(0, Material.IRON_AXE));
-                items.add(new ItemTemplate(2, Material.IRON_SHOVEL)
-                        .addEnchantment(Enchantment.SILK_TOUCH, 1));
-                items.add(new ItemTemplate(3, Material.COOKED_PORKCHOP)
-                        .setAmount(32));
-            }
-            case OVERPOWERED -> {
-                items.add(WAND_ITEM.copyToSlot(8));
-                items.add(helmet
-                        .addEnchantment(Enchantment.UNBREAKING, 3)
-                        .addEnchantment(Enchantment.AQUA_AFFINITY, 1)
-                        .addEnchantment(Enchantment.PROTECTION, 4));
-                items.add(boots
-                        .addEnchantment(Enchantment.UNBREAKING, 3)
-                        .addEnchantment(Enchantment.DEPTH_STRIDER, 3)
-                        .addEnchantment(Enchantment.PROTECTION, 4));
-                items.add(new ItemTemplate(1, Material.NETHERITE_PICKAXE)
-                        .addEnchantment(Enchantment.FORTUNE, 3)
-                        .addEnchantment(Enchantment.EFFICIENCY, 5));
-                items.add(new ItemTemplate(0, Material.NETHERITE_AXE)
-                        .addEnchantment(Enchantment.LOOTING, 3)
-                        .addEnchantment(Enchantment.SHARPNESS, 5)
-                        .addEnchantment(Enchantment.EFFICIENCY, 5));
-                items.add(new ItemTemplate(2, Material.NETHERITE_SHOVEL)
-                        .addEnchantment(Enchantment.SILK_TOUCH, 1)
-                        .addEnchantment(Enchantment.EFFICIENCY, 5));
-                items.add(new ItemTemplate(3, Material.GOLDEN_CARROT)
-                        .setAmount(64));
-            }
-            case RELOADED -> {
-                items.add(WAND_ITEM.copyToSlot(8));
-                items.add(helmet
-                        .addEnchantment(Enchantment.UNBREAKING, 3)
-                        .addEnchantment(Enchantment.AQUA_AFFINITY, 1)
-                        .addEnchantment(Enchantment.PROTECTION, 4));
-                items.add(boots
-                        .addEnchantment(Enchantment.UNBREAKING, 3)
-                        .addEnchantment(Enchantment.DEPTH_STRIDER, 3)
-                        .addEnchantment(Enchantment.PROTECTION, 4));
-                items.add(new ItemTemplate(38, Material.ELYTRA)
-                        .addEnchantment(Enchantment.UNBREAKING, 10));
-                items.add(new ItemTemplate(1, Material.NETHERITE_PICKAXE)
-                        .addEnchantment(Enchantment.FORTUNE, 3)
-                        .addEnchantment(Enchantment.EFFICIENCY, 5));
-                items.add(new ItemTemplate(0, Material.NETHERITE_AXE)
-                        .addEnchantment(Enchantment.LOOTING, 3)
-                        .addEnchantment(Enchantment.SHARPNESS, 5)
-                        .addEnchantment(Enchantment.EFFICIENCY, 5));
-                items.add(new ItemTemplate(2, Material.NETHERITE_SHOVEL)
-                        .addEnchantment(Enchantment.SILK_TOUCH, 1)
-                        .addEnchantment(Enchantment.EFFICIENCY, 5));
-                items.add(new ItemTemplate(3, Material.ENCHANTED_GOLDEN_APPLE)
-                        .setAmount(64));
-            }
-            case CUSTOM_1, CUSTOM_2, CUSTOM_3, CUSTOM_4, CUSTOM_5 -> {
-                CustomKit kit = customKitData.getCustomKit(this);
-                if (kit != null)
-                {
-                    // Color colored items according to the team color.
-                    return kit.items().stream()
-                            .map(item -> new SerializableItem(item.slot(), ItemTemplate.colorItemStack(item.stack(), teamColor)))
-                            .toList();
-                }
-            }
-        }
-
         return items.stream().map(SerializableItem::fromItemTemplate).collect(Collectors.toList());
     }
 
@@ -211,6 +214,6 @@ public enum PlayerKit
     }
 
     public static Set<PlayerKit> customKits() {
-        return ImmutableSet.of(CUSTOM_1, CUSTOM_2, CUSTOM_3, CUSTOM_4, CUSTOM_5);
+        return Set.of(CUSTOM_1, CUSTOM_2, CUSTOM_3, CUSTOM_4, CUSTOM_5);
     }
 }
